BAU: Update /journey-transitions to POST to lambda

--- a/openAPI/core-back-analytics.yaml
+++ b/openAPI/core-back-analytics.yaml
@@ -44,7 +44,7 @@ paths:
         - apiKey: []
       x-amazon-apigateway-integration:
         type: "aws_proxy"
-        httpMethod: "GET"
+        httpMethod: "POST"
         uri:
           Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${FetchJourneyTransitionsFunction.Arn}:live/invocations
         passthroughBehavior: "when_no_match"
