PYIC-8363: Update to use :live

--- a/deploy/template.yaml
+++ b/deploy/template.yaml
@@ -3057,7 +3057,7 @@ Resources:
     Type: AWS::Lambda::Permission
     Properties:
       Action: lambda:InvokeFunction
-      FunctionName: !Ref FetchJourneyTransitionsFunction
+      FunctionName: !Sub "fetch-journey-transitions-${Environment}:live"
       Principal: apigateway.amazonaws.com
       SourceArn: !Sub "arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${IPVCoreAnalyticsAPI}/*/*/*"
 
