BAU: Add DependsOn to FetchJourneyTransitionsFunctionPermission

--- a/deploy/template.yaml
+++ b/deploy/template.yaml
@@ -3125,6 +3125,7 @@ Resources:
 
   FetchJourneyTransitionsFunctionPermission:
     Type: AWS::Lambda::Permission
+    DependsOn: FetchJourneyTransitionsFunction
     Properties:
       Action: lambda:InvokeFunction
       FunctionName: !Sub "fetch-journey-transitions-${Environment}:live"
