PYIC-8358: Add audit event lunch to manual f2f lambda.

--- a/lambdas/manual-f2f-pending-reset/build.gradle
+++ b/lambdas/manual-f2f-pending-reset/build.gradle
@@ -8,11 +8,11 @@ plugins {
 dependencies {
 	implementation platform(libs.awsSdkBom),
 			libs.awsSdkDynamodb,
-
 			libs.bundles.awsLambda,
 			libs.apacheHttpCore,
 			project(":libs:common-services"),
-			project(":libs:cri-response-service")
+			project(":libs:cri-response-service"),
+			project(":libs:audit-service")
 
 	testImplementation libs.junitJupiter,
 			libs.mockitoJunit,
