PYIC-8457: remove debug config from collector.yaml

--- a/lambdas/process-candidate-identity/src/main/resources/collector.yaml
+++ b/lambdas/process-candidate-identity/src/main/resources/collector.yaml
@@ -15,7 +15,7 @@ service:
   pipelines:
     traces:
       receivers: [otlp]
-      exporters: [otlphttp,debug]
+      exporters: [otlphttp]
     metrics:
       receivers: [otlp]
-      exporters: [otlphttp,debug]
+      exporters: [otlphttp]
