PYIC-7801: Update license to licence

--- a/local-running/core.local.params.yaml
+++ b/local-running/core.local.params.yaml
@@ -417,7 +417,7 @@ core:
       credentialIssuers:
         dwpKbv:
           enabled: false
-    drivingLicenseTest:
+    drivingLicenceTest:
       credentialIssuers:
         drivingLicence:
           enabled: false
