PYIC-8495: Use checkVcResponse in CheckExistingIdentityHandler

--- a/lambdas/check-existing-identity/build.gradle
+++ b/lambdas/check-existing-identity/build.gradle
@@ -9,6 +9,7 @@ dependencies {
 	implementation libs.bundles.awsLambda,
 			project(":libs:common-services"),
 			project(":libs:cimit-service"),
+			project(":libs:cri-checking-service"),
 			project(":libs:cri-response-service"),
 			project(":libs:audit-service"),
 			project(":libs:gpg45-evaluator"),
