--- a/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/nested-journeys/strategic-app-triage.yaml
+++ b/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/nested-journeys/strategic-app-triage.yaml
@@ -5,6 +5,9 @@ description: >-
 entryEvents:
   appTriage:
     targetState: IDENTIFY_DEVICE
+  dl-auth-source-check:
+    targetState: STRATEGIC_APP_HANDLE_RESULT
+    targetEntryEvent: dl-auth-source-check
 
 nestedJourneyStates:
   IDENTIFY_DEVICE:
