--- a/settings.gradle
+++ b/settings.gradle
@@ -33,6 +33,7 @@ include "lambdas",
 		"libs:cimit-service",
 		"libs:common-services",
 		"libs:cri-api-service",
+		"libs:cri-checking-service",
 		"libs:cri-response-service",
 		"libs:cri-storing-service",
 		"libs:evcs-service",
