--- a/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/initial-journey-selection.yaml
+++ b/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/initial-journey-selection.yaml
@@ -64,6 +64,24 @@ states:
       reprove-identity-gpg45-low:
         targetState: REPROVE_IDENTITY_START_P1
 
+      # Routing for check of DCMAW Async VC cross-browser scenario (fail-with-ci already covered).
+      # Should have the same routing as same-session scenario, except fail-with-no-ci must know vtr for choosing another way.
+      fail-with-no-ci-low:
+        targetJourney: NEW_P1_IDENTITY
+        targetState: DCMAW_ASYNC_ANOTHER_WAY
+      fail-with-no-ci-medium:
+        targetJourney: NEW_P2_IDENTITY
+        targetState: DCMAW_ASYNC_ANOTHER_WAY
+      vcs-not-correlated:
+        targetJourney: FAILED
+        targetState: FAILED
+      dl-auth-source-check-low:
+        targetJourney: NEW_P1_IDENTITY
+        targetState: DCMAW_ASYNC_DL_AUTH_SOURCE_CHECK
+      dl-auth-source-check-medium:
+        targetJourney: NEW_P2_IDENTITY
+        targetState: DCMAW_ASYNC_DL_AUTH_SOURCE_CHECK
+
   REPROVE_IDENTITY_START_P1:
     response:
       type: page
