--- a/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/new-p2-identity.yaml
+++ b/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/new-p2-identity.yaml
@@ -24,6 +24,24 @@ states:
             auditContext:
               mitigationType: enhanced-verification
 
+  DCMAW_ASYNC_ANOTHER_WAY:
+    events:
+      next:
+        targetState: MULTIPLE_DOC_CHECK_PAGE
+        checkMitigation:
+          enhanced-verification:
+            targetState: MITIGATION_01_PYI_POST_OFFICE
+            checkIfDisabled:
+              f2f:
+                targetJourney: INELIGIBLE
+                targetState: INELIGIBLE
+
+  DCMAW_ASYNC_DL_AUTH_SOURCE_CHECK:
+    events:
+      next:
+        targetState: STRATEGIC_APP_TRIAGE
+        targetEntryEvent: dl-auth-source-check
+
   DCMAW_ASYNC_COMPLETE:
     events:
       next:
