PYIC-8104: enc key with alg property in local config

--- a/local-running/core.local.secrets.template.yaml
+++ b/local-running/core.local.secrets.template.yaml
@@ -10,7 +10,8 @@ core:
       "crv": "P-256",
       "d": "OXt0P05ZsQcK7eYusgIPsqZdaBCIJiW4imwUtnaAthU",
       "x": "E9ZzuOoqcVU4pVB9rpmTzezjyOPRlOmPGJHKi8RSlIM",
-      "y": "KlTMZthHZUkYz5AleTQ8jff0TJiS3q2OB9L5Fw4xA04"
+      "y": "KlTMZthHZUkYz5AleTQ8jff0TJiS3q2OB9L5Fw4xA04",
+      "alg": "ES256"
     }'
     # This test encryption key is only used locally
     # pragma: allowlist nextline secret
