PYIC-8248: Enable AIS in local running

--- a/local-running/core.local.params.yaml
+++ b/local-running/core.local.params.yaml
@@ -368,7 +368,7 @@ core:
     kidJarHeaderEnabled: true
     drivingLicenceAuthCheck: true
     storedIdentityServiceEnabled: false
-    accountInterventionsEnabled: false
+    accountInterventionsEnabled: true
 
   features:
     accountInterventions:
