PYIC-8530: Fix up API tests

--- a/local-running/core.local.params.yaml
+++ b/local-running/core.local.params.yaml
@@ -374,6 +374,9 @@ core:
     accountInterventions:
       featureFlags:
         accountInterventionsEnabled: true
+    disableAccountInterventions:
+      featureFlags:
+        accountInterventionsEnabled: false
     storedIdentityService:
       featureFlags:
         storedIdentityServiceEnabled: true
