Revert "PYIC-4934: update kbv cri"

--- a/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/nested-journeys/kbvs.yaml
+++ b/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/nested-journeys/kbvs.yaml
@@ -27,18 +27,6 @@ nestedJourneyStates:
         targetState: PRE_EXPERIAN_PAGE
       fail-with-ci:
         exitEventToEmit: fail-with-ci
-  EXPERIAN_KBV_CRI:
-    response:
-      type: cri
-      criId: experianKbv
-    parent: CRI_STATE
-    events:
-      fail-with-no-ci:
-        exitEventToEmit: fail-with-no-ci
-      next:
-        exitEventToEmit: next
-      fail-with-ci:
-        exitEventToEmit: fail-with-ci
   CRI_EXPERIAN_KBV:
     response:
       type: cri
@@ -57,7 +45,7 @@ nestedJourneyStates:
       pageId: page-pre-experian-kbv-transition
     events:
       next:
-        targetState: EXPERIAN_KBV_CRI
+        targetState: CRI_EXPERIAN_KBV
   PRE_DWP_KBV_PIP_PAGE:
     response:
       type: page
