--- a/local-running/core.local.params.yaml
+++ b/local-running/core.local.params.yaml
@@ -161,8 +161,8 @@ core:
           "requiresAdditionalEvidence":"false",
           "jwksUrl":"https://fraud-cri.stubs.account.gov.uk/.well-known/jwks.json"
         }'
-    experianKbv:
-      id: experianKbv
+    kbv:
+      id: kbv
       name: Experian KBV
       enabled: "true"
       unavailable: false # temporarily unavailable
